--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [{escalus, ".*", {git, "git://github.com/esl/escalus.git", {branch, "master"}}}]}.
+
+{relx, [{release, {mercutio, "0.0.1"},[mercutio, runtime_tools]},
+        {include_erts, true}]}.
+
+{ct_opts, [{config, "test/test.cfg"}]}.
