--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,13 +10,17 @@ on:
   pull_request:
     branches: [ master ]
 
+  # Run this workflow every day
+  schedule:
+    - cron: '0 0 * * *'
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
     name: OTP ${{matrix.otp}}
     strategy:
       matrix:
-        otp: ['21.0']
+        otp: ['22.3.4', '21.3']
     runs-on: 'ubuntu-20.04'
     steps:
       - uses: actions/checkout@v2
@@ -32,5 +36,6 @@ jobs:
           wget -O bin/rebar3 https://s3.amazonaws.com/rebar3/rebar3
           chmod a+x bin/rebar3
           echo "${PWD}/bin" >> "$GITHUB_PATH"
+      - run: ci_testing/build_mercutio_image.sh ${{matrix.otp}}
       - run: ci_testing/start_xmpp_cluster.sh
       - run: ci_testing/run_test.sh
