--- a/rebar.config
+++ b/rebar.config
@@ -5,3 +5,10 @@
         {include_erts, true}]}.
 
 {ct_opts, [{config, "test/test.cfg"}]}.
+
+{ xref_checks, [
+    undefined_function_calls,
+    undefined_functions,
+    locals_not_used,
+    deprecated_function_calls,
+    deprecated_functions]}.
