updating relx configuration
fast_tls requires p1_utils but doesn't list it in *.app.src file.
as a temporary workaround p1_utils is added to the relx configuration.
for more information see this issue:
    https://github.com/processone/fast_tls/issues/50

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,10 @@
 {erl_opts, [debug_info]}.
 {deps, [{escalus, ".*", {git, "git://github.com/esl/escalus.git", {branch, "master"}}}]}.
 
-{relx, [{release, {mercutio, "0.0.1"},[mercutio, runtime_tools]},
+{relx, [{release, {mercutio, "0.0.1"},[
+           mercutio,
+           p1_utils,
+           runtime_tools]},
         {include_erts, true}]}.
 
 {ct_opts, [{config, "test/test.cfg"}]}.
